# the-algorithm

home-mixer/server/src/main/scala/com/twitter/home_mixer/: BUILD.bazel  HomeMixerServer.scala  HomeMixerThriftServerWarmupHandler.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/candidate_pipeline/: BUILD.bazel  ConversationServiceCandidatePipelineConfig.scala  ConversationServiceCandidatePipelineConfigBuilder.scala  ConversationServiceResponseFeatureTransformer.scala  EditedTweetsCandidatePipelineConfig.scala  VerifiedPromptCandidatePipelineConfig.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/controller/: BUILD.bazel  HomeHttpController.scala  HomeThriftController.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/federated/: BUILD.bazel  HomeMixerColumn.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/model/: BUILD.bazel  ClearCacheIncludeInstruction.scala  ContentFeatures.scala  GrokTopics.scala  HomeFeatures.scala  HomeLargeEmbeddingsFeatures.scala  NaviClientConfig.scala  NavigationIncludeInstruction.scala  PhoenixPredictedScoreFeature.scala  PredictedScoreFeature.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/module/: BUILD.bazel  ClusterDetailsModule.scala  EarlybirdRealtimeCGModule.scala  EventsRecosClientModule.scala  GizmoduckTimelinesCacheClientModule.scala  HomeMixerFeaturesModule.scala  HomeMixerFlagsModule.scala  HomeMixerResourcesModule.scala  InMemoryCacheModule.scala  LimiterModule.scala  ManhattanClientsModule.scala  ManhattanFeatureRepositoryModule.scala  MediaClusterId88Module.scala  MediaClusterIdModule.scala  MemcachedFeatureRepositoryModule.scala  MemcachedScoredCandidateFeaturesStoreModule.scala  NaviModelClientModule.scala  OptimizedStratoClientModule.scala  PhoenixClientModule.scala  RealGraphInNetworkScoresModule.scala  RealtimeAggregateFeatureRepositoryModule.scala  ScoredTweetsMemcacheModule.scala  ScoredVideoTweetsMemcacheModule.scala  ScribeEventPublisherModule.scala  ThriftFeatureRepositoryModule.scala  TvWatchHistoryCacheClientModule.scala  TweetWatchTimeMetadataModule.scala  TweetypieStaticEntitiesCacheClientModule.scala  TwhinEmbeddingsModule.scala  UttTopicModule.scala  VideoEmbeddingModule.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/param/: HomeGlobalParamConfig.scala  HomeGlobalParams.scala  HomeMixerFlagName.scala  HomeMixerInjectionNames.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/product/: BUILD.bazel  HomeProductPipelineRegistryConfig.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/service/: BUILD.bazel  HomeMixerAccessPolicy.scala  ScoredTweetsService.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/store/: BUILD.bazel  MediaClusterId88Store.scala  MediaClusterId95Store.scala  MediaClusterIdStoreTrait.scala  RTAMHStore.scala  RealGraphInNetworkScoresStore.scala  TweetWatchTimeMetadataStore.scala  TwhinEmbeddingsStore.scala  VideoEmbeddingMHStore.scala
home-mixer/server/src/main/scala/com/twitter/home_mixer/util/: BUILD.bazel  CachedScoredTweetsHelper.scala  CandidatesUtil.scala  LanguageCode.scala  NaviScorerStatsHandler.scala  ObservedKeyValueResultHandler.scala  PhoenixScorerStatsHandler.scala  PhoenixUtils.scala  RerankerUtil.scala  SignalUtil.scala  TensorFlowUtil.scala  UrtUtil.scala
tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/: BUILD.bazel  TweetMixerHttpServerWarmupHandler.scala  TweetMixerServer.scala  TweetMixerThriftServerWarmupHandler.scala
tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_pipeline/: BUILD.bazel  CertoTopicTweetsCandidatePipelineConfigFactory.scala  ContentAnnTweetBasedCandidatePipelineConfigFactory.scala  ContentExplorationDRTweetTweetCandidatePipelineConfigFactory.scala  ContentExplorationDRTweetTweetTierTwoCandidatePipelineConfigFactory.scala  ContentExplorationDRUserTweetCandidatePipelineConfig.scala  ContentExplorationDRUserTweetTierTwoCandidatePipelineConfig.scala  ContentExplorationEmbeddingSimilarityCandidatePipelineConfigFactory.scala  ContentExplorationEmbeddingSimilarityTierTwoCandidatePipelineConfigFactory.scala  ContentExplorationEvergreenDRTweetTweetCandidatePipelineConfigFactory.scala  ContentExplorationSimclusterColdCandidatePipelineConfig.scala  ControlAiTopicCandidatePipelineConfig.scala  CuratedUserTlsPerLangaugeCandidatePipelineConfigFactory.scala  DeepRetrievalTweetTweetEmbeddingSimilarityCandidatePipelineConfigFactory.scala  DeepRetrievalTweetTweetSimilarityCandidatePipelineConfigFactory.scala  DeepRetrievalUserTweetSimilarityCandidatePipelineConfig.scala  EarlybirdInNetworkCandidatePipelineConfigFactory.scala  EventsCandidatePipelineConfig.scala  EvergreenDRCrossBorderUserTweetCandidatePipelineConfig.scala  EvergreenDRUserTweetCandidatePipelineConfig.scala  EvergreenVideosCandidatePipelineConfigFactory.scala  HaploliteCandidatePipelineConfigFactory.scala  MediaDeepRetrievalTweetTweetSimilarityCandidatePipelineConfigFactory.scala  MediaDeepRetrievalUserTweetSimilarityCandidatePipelineConfigFactory.scala  PinnedTweetRelatedCreatorPipelineConfigFactory.scala  PopGrokTopicTweetsCandidatePipelineConfigFactory.scala  PopularGeoTweetsCandidatePipelineConfigFactory.scala  PopularTopicTweetsCandidatePipelineConfigFactory.scala  QigSearchHistoryTweetsCandidatePipelineConfigFactory.scala  SemanticVideoCandidatePipelineConfigFactory.scala  SimclustersInterestedInCandidatePipelineConfigFactory.scala  SimclustersProducerBasedCandidatePipelineConfigFactory.scala  SimclustersPromotedCreatorCandidatePipelineConfigFactory.scala  SimclustersTweetBasedCandidatePipelineConfigFactory.scala  SkitTopicTweetsCandidatePipelineConfigFactory.scala  TrendsVideoCandidatePipelineConfig.scala  TwHINRebuildTweetSimilarityCandidatePipelineConfigFactory.scala  TwHINTweetSimilarityCandidatePipelineConfigFactory.scala  TwhinConsumerBasedCandidatePipelineConfigFactory.scala  TwhinUserTweetSimilarityCandidatePipelineConfig.scala  (+10 more)
tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/config/: BUILD.bazel  SimClustersANNConfig.scala  (+1 more)
(+835 files in other folders)
