scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "finagle/finagle-netty4/src/main/scala",
        "finatra-internal/mtls-http/src/main/scala",
        "home-mixer/server/src/main/resources",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/controller",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/federated",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/module",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/product",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "joinkey/src/main/scala/com/twitter/joinkey/context",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/module",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/controllers",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/module",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/module/stringcenter",
        "strato/src/main/scala/com/twitter/strato/fed/server",
        "timelines/src/main/scala/com/twitter/timelines/config",
    ],
)
