scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator/builder",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator/urt/builder",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/filter",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/gate",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/service",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/stale_tweets",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/tweetconvosvc",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/candidate/communities",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/candidate/param_gated",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/filter",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/gate",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/transformer/stale_tweets",
    ],
    exports = [
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/tweetconvosvc",
    ],
)
