scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/marshaller/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "joinkey/src/main/scala/com/twitter/joinkey/context",
        "joinkey/src/main/thrift/com/twitter/joinkey/context:joinkey-context-scala",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/functional_component/configapi",
        "stitch/stitch-gizmoduck",
        "strato/config/columns/auth-context:auth-context-strato-client",
        "strato/src/main/scala/com/twitter/strato/callcontext",
        "strato/src/main/scala/com/twitter/strato/fed/server",
    ],
)
