scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/io/grpc:grpc-protobuf",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/candidate_source",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/signup",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/model/cursor",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/model/query/ads",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/premarshaller/urt/builder",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/feature/datarecord",
        "search/search-router/thrift/src/main/thrift:thrift-scala",
        "src/java/com/twitter/ml/api:api-base",
        "src/java/com/twitter/ml/api/constant",
        "src/scala/com/twitter/timelines/prediction/features/common",
        "src/scala/com/twitter/timelines/prediction/features/conversation_features",
        "src/scala/com/twitter/timelines/prediction/features/engaged_language_features",
        "src/scala/com/twitter/timelines/prediction/features/recap",
        "src/scala/com/twitter/timelines/prediction/features/request_context",
        "src/scala/com/twitter/timelines/prediction/features/user_health",
        "src/thrift/com/twitter/search:earlybird-scala",
        "src/thrift/com/twitter/timelines/impression_bloom_filter:thrift-scala",
        "src/thrift/com/twitter/timelinescorer/common/scoredtweetcandidate:thrift-scala",
        "strato/config/src/thrift/com/twitter/strato/columns/content_understanding:content_understanding-scala",
        "timelinemixer/common/src/main/scala/com/twitter/timelinemixer/clients/manhattan",
        "timelinemixer/common/src/main/scala/com/twitter/timelinemixer/clients/persistence",
        "timelinemixer/server/src/main/scala/com/twitter/timelinemixer/injection/model/candidate",
        "topic-social-proof/server/src/main/thrift:thrift-scala",
        "tweetconvosvc/common/src/main/thrift/com/twitter/tweetconvosvc/tweet_ancestor:thrift-scala",
        "user_history_transformer/service/src/main/java/com/x/user_action_sequence",
    ],
    exports = [
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/signup",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/model/cursor",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/model/query/ads",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/feature/datarecord",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/pipeline",
        "src/thrift/com/twitter/timelinescorer/common/scoredtweetcandidate:thrift-scala",
        "tweetconvosvc/common/src/main/thrift/com/twitter/tweetconvosvc/tweet_ancestor:thrift-scala",
    ],
)
