scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/twitter/bijection:scrooge",
        "3rdparty/jvm/com/twitter/storehaus:core",
        "3rdparty/jvm/io/grpc:grpc-netty",
        "cproxy/thrift/src/main/thrift:thrift-scala",
        "deferredrpc/client/src/main/scala",
        "deferredrpc/client/src/main/thrift:thrift-scala",
        "escherbird/src/scala/com/twitter/escherbird/util/uttclient",
        "escherbird/src/thrift/com/twitter/escherbird/utt:strato-columns-scala",
        "eventbus/client/src/main/scala/com/twitter/eventbus/client",
        "events-recos/events-recos-service/src/main/thrift:events-recos-thrift-scala",
        "finagle-internal/finagle-grpc/src/main/scala",
        "frigate/frigate-common/src/main/scala/com/twitter/frigate/common/store/interests:package",
        "graph-feature-service/src/main/thrift/com/twitter/graph_feature_service:graph_feature_service_thrift-scala",
        "home-mixer-features/thrift/src/main/thrift:thrift-java",
        "home-mixer-features/thrift/src/main/thrift:thrift-scala",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/store",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/util",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/util/earlybird",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "interests-service/thrift/src/main/thrift:thrift-scala",
        "kafka/finagle-kafka/finatra-kafka/src/main/scala",
        "limiter/thrift-only/src/main/thrift:thrift-scala",
        "media-understanding/video-summary/thrift/src/main/thrift:thrift-scala",
        "people-discovery/api/thrift/src/main/thrift:thrift-scala",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/module",
        "product-mixer/shared-library/src/main/scala/com/twitter/product_mixer/shared_library/manhattan_client",
        "product-mixer/shared-library/src/main/scala/com/twitter/product_mixer/shared_library/memcached_client",
        "product-mixer/shared-library/src/main/scala/com/twitter/product_mixer/shared_library/thrift_client",
        "servo/manhattan",
        "src/java/com/twitter/logpipeline/client:event-publisher-client-lib",
        "src/java/com/twitter/logpipeline/client/common:event-publisher-core",
        "src/java/com/twitter/logpipeline/client/serializers:event-publisher-serializers",
        "src/scala/com/twitter/ml/featurestore/lib",
        "src/scala/com/twitter/scalding_internal/multiformat/format",
        "src/scala/com/twitter/simclusters_v2/common",
        "src/scala/com/twitter/storehaus_internal",
        "src/scala/com/twitter/storehaus_internal/offline",
        "src/scala/com/twitter/summingbird_internal/bijection:bijection-implicits",
        "src/scala/com/twitter/summingbird_internal/runner/store_config",
        "src/scala/com/twitter/timelines/util",
        "src/scala/com/twitter/wtf/entity_real_graph/summingbird/client",
        "src/scala/com/twitter/wtf/entity_real_graph/summingbird/common/config",
        "src/thrift/com/twitter/ads/adserver:adserver_rpc-scala",
        "src/thrift/com/twitter/clientapp/gen:clientapp-scala",
        "src/thrift/com/twitter/manhattan:v1-scala",
        "src/thrift/com/twitter/manhattan:v2-scala",
        "src/thrift/com/twitter/recos/user_tweet_entity_graph:user_tweet_entity_graph-scala",
        "src/thrift/com/twitter/search:earlybird-scala",
        "src/thrift/com/twitter/service/metastore/gen:thrift-scala",
        "src/thrift/com/twitter/timelines/impression_store:thrift-scala",
        "src/thrift/com/twitter/timelines/realtime_aggregates:thrift-scala",
        "src/thrift/com/twitter/timelines/served_candidates_logging:served_candidates_logging-scala",
        "src/thrift/com/twitter/timelines/suggests/common:poly_data_record-java",
        "src/thrift/com/twitter/timelines/timeline_logging:thrift-scala",
        "src/thrift/com/twitter/timelinescorer/common/scoredtweetcandidate:thrift-scala",
        "src/thrift/com/twitter/user_session_store:thrift-java",
        "src/thrift/com/twitter/wtf/candidate:wtf-candidate-scala",
        "stitch/stitch-tweetypie",
        "timelinemixer/common/src/main/scala/com/twitter/timelinemixer/clients/manhattan",
        "timelinemixer/common/src/main/scala/com/twitter/timelinemixer/clients/rankedtweetcaching",
        "timelinemixer/server/src/main/scala/com/twitter/timelinemixer/injection/store/persistence",
        "timelines/ml/cont_train/common/client/src/main/scala/com/twitter/timelines/ml/cont_train/common/client/scored_candidate_features_cache",
        "timelines/src/main/scala/com/twitter/timelines/clients/ads",
        "timelines/src/main/scala/com/twitter/timelines/clients/manhattan",
        "timelines/src/main/scala/com/twitter/timelines/clients/memcache_common",
        "timelines/src/main/scala/com/twitter/timelines/clients/predictionservice",
        "timelines/src/main/scala/com/twitter/timelines/clients/strato/topics",
        "timelines/src/main/scala/com/twitter/timelines/clients/strato/twistly",
        "timelines/src/main/scala/com/twitter/timelines/config",
        "timelines/src/main/scala/com/twitter/timelines/util/stats",
        "timelineservice/common/src/main/scala/com/twitter/timelineservice/model",
        "topic-social-proof/server/src/main/scala/com/twitter/tsp/stores",
        "topiclisting/common/src/main/scala/com/twitter/topiclisting/clients/utt",
        "topiclisting/topiclisting-core/src/main/scala/com/twitter/topiclisting",
        "topiclisting/topiclisting-utt/src/main/scala/com/twitter/topiclisting/utt",
        "tweetconvosvc/client/src/main/scala/com/twitter/tweetconvosvc/client/builder",
        "user_history_transformer/protobuf/src/main/protobuf/com/x/user_action_sequence",
        "user_history_transformer/service/src/main/java/com/x/user_action_sequence",
    ],
    exports = [
        "timelines/src/main/scala/com/twitter/timelines/clients/predictionservice",
    ],
)
