scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/twitter/bijection:scrooge",
        "3rdparty/jvm/com/twitter/storehaus:core",
        "finagle/finagle-memcached/src/main/scala",
        "finatra/inject/inject-core/src/main/scala",
        "hermit/hermit-core/src/main/scala/com/twitter/hermit/store/common",
        "hermit/hermit-core/src/main/scala/com/twitter/hermit/store/offheap",
        "media-understanding/video-summary/thrift/src/main/thrift:thrift-scala",
        "src/java/com/twitter/ml",
        "src/scala/com/twitter/ml/api:api-base",
        "src/scala/com/twitter/ml/api/util:datarecord",
        "src/scala/com/twitter/simclusters_v2/summingbird/stores",
        "src/scala/com/twitter/storehaus_internal/manhattan",
        "src/scala/com/twitter/storehaus_internal/memcache",
        "src/scala/com/twitter/storehaus_internal/memcache/config",
        "src/scala/com/twitter/storehaus_internal/offline",
        "src/scala/com/twitter/storehaus_internal/util",
        "src/thrift/com/twitter/ml/api:data-java",
        "src/thrift/com/twitter/timelines/realtime_aggregates:thrift-scala",
        "src/thrift/com/twitter/twistly:twistly-scala",
        "src/thrift/com/twitter/wtf/candidate:wtf-candidate-scala",
        "stitch/stitch-core",
        "util-internal/util-cache/src/main/java",
    ],
)
