scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/io/grpc:grpc-protobuf",
        "3rdparty/jvm/io/grpc:grpc-stub",
        "finagle-internal/finagle-grpc/src/main/scala",
        "finatra/inject/inject-utils/src/main/scala",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/impressed_tweets",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/social_graph",
        "servo/repo/src/main/scala",
        "snowflake/src/main/scala/com/twitter/snowflake/id",
        "src/java/com/twitter/ml/api:api-base",
        "src/java/com/twitter/search/common/util/lang",
        "src/scala/com/twitter/ml/api/util",
        "src/thrift/com/twitter/search/common:constants-java",
        "src/thrift/com/twitter/service/metastore/gen:thrift-scala",
        "storage/clients/manhattan/client/src/main/scala",
        "strato/config/src/thrift/com/twitter/strato/columns/content_understanding:content_understanding-scala",
        "user-signal-service/thrift/src/main/thrift:thrift-scala",
        "user_history_transformer/service/src/main/java/com/x/user_action_sequence",
    ],
)
