scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "ann/src/main/scala/com/twitter/ann/hnsw",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/ann",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/timeline_service",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/uteg",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature/location",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/param_gated",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/filter",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/gate",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/functional_component/candidate_source/strato",
        "src/scala/com/twitter/simclusters_v2/common",
        "src/thrift/com/twitter/recos/user_tweet_entity_graph:user_tweet_entity_graph-scala",
        "src/thrift/com/twitter/search:earlybird-scala",
        "src/thrift/com/twitter/search/query_interaction_graph/service:qig-service-scala",
        "strato/config/columns/recommendations/simclusters_v2:simclusters_v2-strato-client",
        "strato/config/columns/timelines/local:local-strato-client",
        "strato/config/columns/trendsai/media:media-strato-client",
        "timelines/src/main/scala/com/twitter/timelines/clients/haplolite",
        "timelineservice/common:model",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/UTG",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/UVG",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/cached_candidate_source",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/content_embedding_ann",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/curated_user_tls_per_language",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/earlybird_realtime_cg",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/events",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/evergreen_videos",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/ndr_ann",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/popular_geo_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/popular_grok_topic_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/popular_topic_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/qig_service",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/simclusters_ann",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/text_embedding_ann",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/topic_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/trends",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/twhin_ann",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/user_location",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/config",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/feature",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/functional_component/gate",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/functional_component/hydrator",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/functional_component/transformer",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/model",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/model/response",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/param",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/home_recommended_tweets/model/request",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/service",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/utils",
        "tweet-mixer/thrift/src/main/thrift:thrift-scala",
    ],
    exports = [
        "strato/config/columns/recommendations/simclusters_v2:simclusters_v2-strato-client",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_source/events",
    ],
)
