scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/candidate/param_gated",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/param_gated",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/filter",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/selector",
        "strato/config/columns/content_understanding:content_understanding-strato-client",
        "strato/config/columns/unified-counter/service:service-strato-client",
        "strato/config/columns/videoRecommendations/twitterClip:twitterClip-strato-client",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_pipeline",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/feature",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/functional_component/filter",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/functional_component/hydrator",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/functional_component/selector",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/model",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/param",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/utils",
        "user-signal-service/thrift/src/main/thrift:thrift-scala",
        "viewcounts/src/main/thrift/com/twitter/viewcounts:viewcounts-scala",
    ],
    exports = [
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/home_recommended_tweets/model/request",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/home_recommended_tweets/model/response",
    ],
)
