scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/twitter/bijection:scrooge",
        "3rdparty/jvm/com/twitter/storehaus:memcache",
        "frigate/frigate-common/src/main/scala/com/twitter/frigate/common/store/strato",
        "haplolite-thrift/thrift/src/main/thrift:thrift-scala",
        "hermit/hermit-core/src/main/scala/com/twitter/hermit/store/common",
        "hydra/embedding-generation/thrift/src/main/thrift/com/twitter/hydra/embedding_generation:thrift-scala",
        "hydra/root/thrift/src/main/thrift:thrift-scala",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/module",
        "product-mixer/shared-library/src/main/scala/com/twitter/product_mixer/shared_library/manhattan_client",
        "product-mixer/shared-library/src/main/scala/com/twitter/product_mixer/shared_library/memcached_client",
        "relevance-platform/src/main/scala/com/twitter/relevance_platform/common/injection",
        "servo/manhattan",
        "simclusters-ann/thrift/src/main/thrift:thrift-scala",
        "snowflake/src/main/scala/com/twitter/snowflake/id",
        "src/scala/com/twitter/ml/featurestore/lib/params",
        "src/scala/com/twitter/simclusters_v2/common",
        "src/scala/com/twitter/storehaus_internal/manhattan",
        "src/scala/com/twitter/storehaus_internal/manhattan/config",
        "src/scala/com/twitter/storehaus_internal/memcache",
        "src/scala/com/twitter/storehaus_internal/offline",
        "src/scala/com/twitter/storehaus_internal/util",
        "src/scala/com/twitter/topic_recos/stores",
        "src/thrift/com/twitter/core_workflows/user_model:user_model-scala",
        "src/thrift/com/twitter/manhattan:v1-scala",
        "src/thrift/com/twitter/topic_recos:topic_recos-thrift-scala",
        "src/thrift/com/twitter/wtf/candidate:wtf-candidate-scala",
        "timelines/src/main/scala/com/twitter/timelines/clients/ann",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/config",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/model",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/store",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/utils",
        "tweet-mixer/thrift/src/main/thrift:thrift-scala",
    ],
)
