scala_library(
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/product/registry",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/model/request",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/debugger_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/home_recommended_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/imv_recommended_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/imv_related_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/logged_out_video_recommended_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/notifications_recommended_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/rux_related_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/topic_tweets",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/video_recommended_tweets",
        "tweet-mixer/thrift/src/main/thrift:thrift-scala",
    ],
)
