scala_library(
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/selector",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/pipeline/scoring",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/candidate_pipeline",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/param",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/product/home_recommended_tweets/param",
        "tweet-mixer/server/src/main/scala/com/twitter/tweet_mixer/scorer",
    ],
)
