scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/twitter/bijection:scrooge",
        "3rdparty/jvm/com/twitter/storehaus:core",
        "src/thrift/com/twitter/ml/api:data-scala",
        "stitch/stitch-core",
        "storage/clients/manhattan/client/src/main/scala",
        # For TwhinManhattanRWEmbeddingStore
        "hermit/hermit-core/src/main/scala/com/twitter/hermit/store/common",
        "hermit/hermit-core/src/main/scala/com/twitter/hermit/store/offheap",
        "finagle-internal/mtls/src/main/scala/com/twitter/finagle/mtls/authentication",
        "finagle-internal/mtls/src/main/scala/com/twitter/finagle/mtls/authorization",
        "finatra/inject/inject-core/src/main/scala",
        "finagle/finagle-memcached/src/main/scala",
        "product-mixer/shared-library/src/main/scala/com/twitter/product_mixer/shared_library/manhattan_client",
        "src/scala/com/twitter/storehaus_internal/manhattan",
        "src/scala/com/twitter/storehaus_internal/memcache",
        "src/scala/com/twitter/storehaus_internal/memcache/config",
        "src/scala/com/twitter/storehaus_internal/util",
        "src/scala/com/twitter/simclusters_v2/summingbird/stores",
        "src/thrift/com/twitter/simclusters_v2:simclusters_v2-thrift-scala",
        "user_history_transformer/thrift/src/main/thrift/com/twitter/user_history_transformer:user_history_transformer-scala",
        "util-internal/util-cache/src/main/java",
    ],
)
